[package]
name = "libpoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
img-parts = "0.3.0"
libraw_r = { git = "https://github.com/aftershootco/libraw-rs", version = "0.4.2", features = ["jpeg"] }
log = "0.4.17"
thiserror = "1.0.37"
