[package]
name = "libpoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
img-parts = "0.3.0"
libraw_r = { version = "0.4.3", features = ["jpeg"], registry = "ktra" }
log = "0.4.17"
thiserror = "1.0.37"
